# QUTI-Panel

./: AudioBridge.h  CMakeLists.txt  LICENSE  Main.qml  ModuleBase.qml  PresetsPanel.qml  README.md  SensorBridge.h  main.cpp  modulebase.qmodel
bridge/: interface_bridge.cpp  interface_bridge.h
modules/: DelayModule.qml  GainModule.qml  ModuleRegistry.qml  TunerModule.qml
qml/: BusSlot.qml  ConfigPanel.qml  Control_input.qml  EffectTile.qml  Module_base.qml
